# bookstore-serializers-v2

./: .gitignore  README.md  pyproject.toml
bookstore/: settings.py  urls.py
