[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["Jose Mario <joosemariovm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
django-extensions = "^3.1.3"
psycopg2-binary = "^2.9.9"
gunicorn = "^20.1.0"
whitenoise = "^6.7.0"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.7.0"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"